--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,19 @@
-.*
+# Includelist some files
 !.gitignore
+!README.md
 
-# History files
-.Rhistory
-.Rapp.history
+# Ignore all files named .DS_Store or ending with .log
+**/.DS_Store
+**/._*
+**.log
+**.out
 
-# Session Data files
-.RData
-.RDataTmp
+# Ignore files from analysis and data
+*/data/*
+*/analysis/*
+*/results/*
 
-# User-specific files
-.Ruserdata
 
-# Example code in package build process
-*-Ex.R
-
-# Output files from R CMD build
-/*.tar.gz
-
-# Output files from R CMD check
-/*.Rcheck/
-
-# RStudio files
-.Rproj.user/
-
-# produced vignettes
-vignettes/*.html
-vignettes/*.pdf
-
-# OAuth2 token, see https://github.com/hadley/httr/releases/tag/v0.3
-.httr-oauth
-
-# knitr and R markdown default cache directories
-*_cache/
-/cache/
-
-# Temporary files created by R markdown
-*.utf8.md
-*.knit.md
-
-# R Environment Variables
-.Renviron
-
-# pkgdown site
-docs/
-
-# translation temp files
-po/*~
-
-# RStudio Connect folder
-rsconnect/
-.DS_Store
-._.DS_Store
+# Include script files
+!*/scripts/*
+!*/documentation/*
