First update of riboseq pipeline

--- a/02_riboseq/documentation/base.config
+++ b/02_riboseq/documentation/base.config
@@ -11,9 +11,9 @@ export outdir="${project_folder}/analysis/base"
 export scriptdir="${project_folder}/scripts/base"
 export simul_array_runs=6
 export pool_id="base_merged"
-export custom_gtf=""
-export custom_annotation=""
-export custom_annotation_package=""
+export custom_gtf="${wd}/01_rnaseq/analysis/base/customannotation/base_merged_novel_filtered.sorted.gtf"
+export custom_annotation="${wd}/01_rnaseq/analysis/base/customannotation/base_merged/base_merged_novel_filtered.gtf_Rannot"
+export custom_annotation_package="${wd}/01_rnaseq/analysis/base/customannotation/base_merged/BSgenome.Homo.sapiens.basemerged"
 
 # Reference parameters
 export paired_end="false"
