--- a/02_riboseq/documentation/container.config
+++ b/02_riboseq/documentation/container.config
@@ -14,6 +14,7 @@ export pool_id="container_merged"
 export custom_gtf="${wd}/01_rnaseq/analysis/container/customannotation/container_pancreas_novel_filtered.sorted.gtf"
 export custom_annotation="${wd}/01_rnaseq/analysis/container/customannotation/container_pancreas/container_pancreas_novel_filtered.sorted.gtf_Rannot"
 export custom_annotation_package="${wd}/01_rnaseq/analysis/container/customannotation/container_pancreas/BSgenome.Homo.sapiens.containerpancreas"
+
 # Reference parameters
 export paired_end="false"
 export species="Homo_sapiens"
@@ -23,6 +24,7 @@ export annot_version="102"
 # Set paths
 export resource_dir="/hpc/pmc_vanheesch/shared_resources/GENOMES/${species}.${genome_version}/${annot_version}"
 export data_folder="/hpc/pmc_vanheesch/data"  # Data folder containing all of our sequencing data
+export container_dir="/hpc/local/Rocky8/pmc_vanheesch/singularity_images"
 
 #######################
 ### Reference files ###
@@ -32,19 +34,8 @@ export reference_genome="${resource_dir}/Homo_sapiens.GRCh38.dna.primary_assembl
 export reference_annotation="${resource_dir}/annotation/Homo_sapiens.GRCh38.102.gtf_Rannot"
 export reference_annotation_package="${resource_dir}/annotation/BSgenome.Homo.sapiens.GRCh38.102"
 export star_index_basedir="${resource_dir}/STAR/2.7.8a"
-export bowtie2_index="${resource_dir}/bowtie2/2.4.2/heesch_riboseq_contaminants"
-
-#######################
-### Module versions ###
-#######################
-export cutadapt_version=3.4
-export fastqc_version=0.11.9
-export trimgalore_version=0.6.6
-export bowtie2_version=2.4.2
-export star_version=2.7.8a
-export samtools_version=1.12
-export r_version=4.1.2
-export pandoc_dir="/hpc/local/CentOS7/pmc_vanheesch/software/pandoc/bin"
+export bowtie2_index="${resource_dir}/bowtie2/2.4.2/rnacentral_contaminants"
+export pandoc_dir="/usr/src/pandoc/bin"
 
 ###########################
 ### Resource allocation ###
