Add configs & update ribo comparison script

--- a/02_riboseq/documentation/container.config
+++ b/02_riboseq/documentation/container.config
@@ -12,7 +12,7 @@ export scriptdir="${project_folder}/scripts/container"
 export simul_array_runs=6
 export pool_id="container_merged"
 export custom_gtf="${wd}/01_rnaseq/analysis/container/customannotation/container_pancreas_novel_filtered.sorted.gtf"
-export custom_annotation="${wd}/01_rnaseq/analysis/container/customannotation/container_pancreas/container_pancreas_novel_filtered.sorted.gtf_Rannot"
+export custom_annotation="${wd}/01_rnaseq/analysis/container/customannotation/container_pancreas/container_pancreas_novel_filtered.gtf_Rannot"
 export custom_annotation_package="${wd}/01_rnaseq/analysis/container/customannotation/container_pancreas/BSgenome.Homo.sapiens.containerpancreas"
 
 # Reference parameters
@@ -25,6 +25,7 @@ export annot_version="102"
 export resource_dir="/hpc/pmc_vanheesch/shared_resources/GENOMES/${species}.${genome_version}/${annot_version}"
 export data_folder="/hpc/pmc_vanheesch/data"  # Data folder containing all of our sequencing data
 export container_dir="/hpc/local/Rocky8/pmc_vanheesch/singularity_images"
+export package_install_loc="/hpc/local/Rocky8/pmc_vanheesch/Rstudio_Server_Libs/Rstudio_4.1.2_libs"
 
 #######################
 ### Reference files ###
